2006-04-05  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 1.9.4

2006-04-03  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.[ch]:
	* src/gnome/gnc-plugin-basic-commands.c: Serialize access to the
	"Save" and "Save As" commands.  Fixes 148905.

	* src/backend/file/sixtp-dom-generators.c:
	* src/backend/file/gnc-commodity-xml-v2.c:
	* src/gnome-utils/dialog-commodity.c:
	* src/gnome/dialog-commodities.c:
	* src/engine/gnc-commodity.[ch]: Use the name "Currency"
	internally instead of ISO4217.  Make it possible to edit the "get
	quotes" flag on currencies.

2006-04-02  David Hampton  <hampton@employees.org>

	* src/register/ledger-core/split-register-model.c: Change the
	access key on the "Change Split" button.  Fixes 336836.

	* src/gnome-utils/gnc-main-window.c: Change the access key on the
	Transaction menu to not conflict with the Tools menu.  Fixes
	336829.

2006-04-02  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/dialog-account.c: Set search column for account
	  types lists interactive search. Fix 336833.

2006-04-01  David Hampton  <hampton@employees.org>

	* src/backend/file/gnc-account-xml-v2.c:
	* src/scm/price-quotes.scm:
	* src/engine/Account.c:
	* src/engine/engine-utilities.scm:
	* src/engine/gnc-commodity.c: Mike Alexander's patch to get
	currency quote retrieval working again, and some other small
	currency quote bugfixes.  Closes 333572.

2006-03-31  David Hampton  <hampton@employees.org>

	* src/engine/Transaction.c: Restore sorting transactions by date
	posted.  Fixes 335190.

2006-03-30  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-reset-warnings.c: Fix the dialog so that
	the 'Cancel' button cancels all changes made since the dialog was
	opened. (c.f. The HIG section on explicit apply windows.)  The
	'OK' button is now always sensitive.  Fixes #336629 and #336630.

	* src/backend/file/io-gncxml-v2.c: